ensure CoverGrid styles don't leak – fixes logo alignment on cover art

--- a/src/components/djmix/CoverGrid.scss
+++ b/src/components/djmix/CoverGrid.scss
@@ -1,5 +1,5 @@
 
-.CoverGrid-wrappper {
+.CoverGrid-wrapper {
   position: relative;
   width: 1000px;
   height: 1000px;
@@ -27,10 +27,10 @@
       height: 100%;
     }
   }
-}
 
-.mixer-logo {
-  position: absolute;
-  bottom: -3px;
-  right: 5px;
+  .mixer-logo {
+    position: absolute;
+    bottom: -3px;
+    right: 5px;
+  }
 }
